<net.tai2.flowmortardagger2demo.view.TodoEditView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    >

  <TextView
      android:id="@+id/label_content"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textStyle="bold"
      android:text="@string/label_content"
      />

  <EditText
      android:id="@+id/content"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/label_content"
      android:singleLine="true"
      />

  <TextView
      android:id="@+id/label_added_date"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/content"
      android:layout_marginTop="20dp"
      android:textStyle="bold"
      android:text="@string/label_added_date"
      />

  <TextView
      android:id="@+id/added_date"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/label_added_date"
      android:layout_marginTop="5dp"
      />

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/added_date"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="20dp"
      android:orientation="horizontal"
      >

    <Button
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_update"
        />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"
        />
  </LinearLayout>
</net.tai2.flowmortardagger2demo.view.TodoEditView>
